--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "eslint": "^7.11.0",
     "eslint-config-trybe-frontend": "^1.2.1",
+    "eslint-plugin-sonarjs": "^0.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
